# pycryptoex

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
clients/: bybit.py  kucoin.py
clients/kucoin/: kucoin.py  pyproject.toml
crypto_exchange/: _cli.py  exceptions.py  exchange.py  utils.py
pycryptoex/: _cli.py
pycryptoex/base/: exceptions.py  exchange.py  utils.py  websocket.py
